--- a/Scripts/Biomarcador_I_Oxitocina.Rmd
+++ b/Scripts/Biomarcador_I_Oxitocina.Rmd
@@ -123,9 +123,9 @@ ggplot(data.oxt.plot.oxtpost, aes(x=predictor,y=value)) +
         axis.text.x=element_blank(),
         axis.ticks.x=element_blank(), 
         plot.title = element_text(hjust = 0.5))+
-  ggtitle("Oxt,post - variable respuesta") +
+  ggtitle("Oxt.post - variable respuesta") +
   labs(y="Nivel de oxitocina tras el estímulo (pg/ml)") +
-  ggsave(filename = paste0(getwd(),"/Scripts/Figures/OXT_post.png"), last_plot(),width = 3.5, height = 3.5,"png")
+  ggsave(filename = paste0(getwd(),"/Figures/OXT_post.png"), last_plot(),width = 3.5, height = 3.5,"png")
 
 ```
 
@@ -248,7 +248,7 @@ ggplot(data.oxt.plot, aes(x=predictor,y=value, fill=stimulus.type)) +
         legend.title = element_blank(), 
         legend.position = "bottom")+
   scale_fill_discrete(name = "Estímulo", labels = c("Ninguno", "Físico"))+
-  ggsave(filename = paste0(getwd(),"/Scripts/Figures/stimulus.change1.png"), last_plot(),width = 6, height = 3.5,"png")
+  ggsave(filename = paste0(getwd(),"/Figures/stimulus.change1.png"), last_plot(),width = 6, height = 3.5,"png")
 ```
 
 En ninguno de los tres gráficos de la figura XX a simple vista se observa que la variable esté distribuida de forma normal. En algunos grupos (*hr.bas* sin estímulo o *oxt.pre* con y sin estímulo) parece que las variables están muy sesgadas. Para analizar los valores numéricamente, en la tabla XX que se muestra a continuación se describen los valores de las tres variables en general tanto clasificándolas por cada tipo de estímulo como en general. 
@@ -281,7 +281,7 @@ ggplot(data.oxt.plot.age, aes(x=predictor,y=value)) +
          plot.title = element_text(hjust = 0.5))+
   ggtitle("Edad participantes") +
   ylab("Edad participantes (años)") + 
-  ggsave(filename = paste0(getwd(),"/Scripts/Figures/EdadOXT.png"), last_plot(),width = 3.5, height = 3.5,"png")
+  ggsave(filename = paste0(getwd(),"/Figures/EdadOXT.png"), last_plot(),width = 3.5, height = 3.5,"png")
 ```
 
 De la misma manera que con las otras variables numéricas, en la tabla XXX se muestra el resumen de los valores de la variable edad. 
