--- a/Scripts/Data/readme
+++ b/Scripts/Data/readme
@@ -1,2 +1,2 @@
 Data required for processing the R script. 
-It would be available upon reasonable request (jone.renteria25@gmail.com)
+It would be available upon reasonable request (jrenteriaa@uoc.edu)
